# pass-manager

./: .env  Cargo.toml  architecture.md  docker-compose.yml
migrations/2026-01-31-165738-0000_create_users/: up.sql
migrations/2026-02-01-072903-0000_update_users/: up.sql
migrations/2026-02-02-111714-0000_create_users/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/endpoints/: auth.rs  get_crypto_params.rs  get_salt.rs  get_vault.rs  mod.rs  register.rs
