[package]
name = "pass-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
actix-cors = "0.7.1"
